# Virus-Scanner

./: CMakeLists.txt  CMakeSettings.json  README.md
app/: main.cpp
include/: export.hpp
include/logger/: logger.hpp
include/md5/: md5.hpp
include/parser/: parser.hpp
include/scanner/: scanner.hpp
tests/: logger_tests.cpp  md5_tests.cpp  parser_tests.cpp
